[tool.poetry]
name = "python-competitive-programming"
version = "0.1.0"
description = "for competitive programming"
authors = ["RyoNak-billy <nakagamiryo0901@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
ipykernel = "^6.25.2"
pytest = "^7.4.2"
numpy = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
